[package]
name = "nsl-dulieutonghop"
version = "0.0.1" # Nhớ tăng version khi release
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "nsl_dulieutonghop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# --- CÁC THƯ VIỆN MỚI ---
base64 = "0.21"
magic_crypt = "3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"