[package]
name = "nsl-dulieutonghop"
version = "1.0.31"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "nsl_dulieutonghop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# KHÔNG CẦN "unstable" NỮA VÌ TA DÙNG CÁCH ỔN ĐỊNH
tauri = { version = "2", features = [] } 
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
magic-crypt = "3.1" # Dùng gạch ngang (-)

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"