[package]
name = "nsl-dulieutonghop"
version = "1.0.36"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "nsl_dulieutonghop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# [SỬA LỖI TẠI ĐÂY]
# 1. Dùng bản 2.0.0-rc để đảm bảo mới nhất
# 2. Xóa "webview", thêm "unstable" để dùng WebviewBuilder
tauri = { version = "^2.0.0", features = ["devtools", "unstable"] } 

tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
magic-crypt = "3.1"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
